tests/test_malformed_trn.expected
Error: Expected number or identifier at line 3
  3 | lst [1,2,3] | trn * -> emt
                          ^
